# recruitment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_KULLANIM_KILAVUZU.md  AUTHENTICATION_README.md  Dockerfile  IK_API_Postman_Collection.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: permissions.py
apps/api/docs/: readme.md
apps/api/permissions/: base_permission.py  permission_factory.py  permissions.py
apps/api/v1/: paginators.py  urls.py  utils.py
apps/candidate/: admin.py  apps.py  models.py
apps/candidate/docs/: readme.md
apps/candidate/migrations/: 0001_initial.py  0002_alter_candidate_email.py  0002_candidate_recruiter.py  0002_initial.py  (+4 more)
apps/client_company/: admin.py  apps.py  models.py
apps/flow/: admin.py  apps.py  base_tasks.py  helpers.py  models.py  tasks.py
apps/hr_company/: admin.py  apps.py  models.py
apps/hr_user/: admin.py  apps.py  base_hr.py  models.py
apps/job/: models.py
apps/job_posting/: admin.py  apps.py  models.py  tasks.py
apps/recruitment/: apps.py  models.py
apps/tests/: test_deactivate_expired_job_postings.py  test_job_posting.py  test_weekly_activity_report_pdf.py
apps/user/: models.py
libs/: base_error.py  customfields.py
libs/abstract/: models.py
libs/logging/: handlers.py
libs/tests/: __init__.py
libs/utils/: general.py
logstash/pipeline/: logstash.conf
recruitment/: __init__.py  asgi.py  celery.py  celery_schedules.py  exceptions.py  settings.py  urls.py  wsgi.py
reports/: monthly_activity_report_2025_07.tex  weekly_activity_report_2025_07.tex
(+54 files in other folders)
