[project]
name = "ik"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-shell-plus>=1.1.7",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "ipython>=8.37.0",
    "pre-commit>=4.2.0",
    "requests>=2.32.4",
]
