[project]
name = "ik"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-shell-plus>=1.1.7",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "ipython>=8.37.0",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "django-celery-beat>=2.5.0",
    "flower>=2.0.0",
]
